# brownie-metadata-api

./: .cursorrules  .dockerignore  .gitignore  CHANGELOG.md  CI_SSL_SOLUTION.md  Dockerfile  GITHUB_CI_FIX.md  Makefile  README.md  SSL_TEST_SUMMARY.md  debug_auth.py  debug_bcrypt.py  debug_user_endpoints.py  env.example  pyproject.toml  test_argon2.py  test_enum_conversion.py  test_jwt.py  test_user_crud_complete.py  working notes with ai
.github/workflows/: README.md  ci-cd.yml  ssl-tests.yml
app/: __init__.py  auth.py  cert_manager.py  db.py  main.py  models.py  models_minimal.py  okta_auth.py  schemas.py  secrets.py  settings.py
app/routers/: agent_configs.py  incidents.py  organizations.py  stats.py  teams.py  users.py
config/: env.example  env.template
docs/: ENTERPRISE_READY.md  PRODUCTION_DEPLOYMENT.md  README.md  SECURITY.md  agent.md  deployment.md  operations.md
infrastructure/docker/: Dockerfile  docker-compose.yml
scripts/: generate_dev_certs.py  security_check.py
tests/: Dockerfile.postgres-ssl  SSL_TESTING.md  __init__.py  conftest.py  docker-compose.ssl.yml  docker-compose.test.yml  pg_hba.conf  ssl-postgresql.conf  test_auth.py  test_auth_comprehensive.py  test_health.py  test_incidents.py  test_organizations.py  test_teams.py  test_user_crud_comprehensive.py
tests/debug/: debug_auth.py  debug_bcrypt.py  debug_model_conversion.py  debug_user_endpoints.py
tests/integration/: test_integration.py  test_ssl_connection.py
tests/unit/: test_cert_manager.py
tests/utilities/: manual_argon2.py  manual_enum_conversion.py  manual_jwt_test.py  manual_user_crud.py  manual_user_crud_complete.py  test_argon2.py  test_enum_conversion.py  test_jwt.py  test_user_crud.py  test_user_crud_complete.py
